Fixed issue with extra space, must specify body's margin = 0

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,13 @@
+html {
+    font-family: sans-serif;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+body {
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 h1, h2, h3, h4, p, ul {
     color: white;
 }
